- fix syntax error

--- a/duplicity-backup.conf
+++ b/duplicity-backup.conf
@@ -7,7 +7,7 @@ config:
 backup:
   'bin':
     type: 'file'
-    disabled: 'no''
+    disabled: 'no'
     backup-cd-directory: '/'
     backup-this-directory: 'bin'
     backup-target: 'file:///backup/backup'
